# dcode

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
project/plans/2026-03-20-dcode-cli/: implementation-notes.md  plan.md  research-findings.md
project/plans/2026-04-27-audit-cleanup/: implementation-notes.md  plan.md  verify-report.md
project/plans/2026-04-29-doctor-update/: implementation-notes.md  research-findings.md
src/dcode/: __init__.py  __main__.py  _progress.py  _rich.py  cli.py  core.py  devcontainer_cli.py  doctor.py  shell.py  update.py  version_check.py  wsl.py
tests/: conftest.py  test_cli.py  test_core.py  test_devcontainer_cli.py  test_doctor.py  test_progress.py  test_shell.py  test_update.py  test_version_check.py  test_wsl.py
