[project]
name = "dcode"
version = "0.4.1"
description = "Open folders in VS Code devcontainers from the CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["json5"]

[project.scripts]
dcode = "dcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcode"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest"]
