[project]
name = "dcode"
description = "Open folders in VS Code devcontainers from the CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["json5"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rosstaco/dcode"
Issues = "https://github.com/rosstaco/dcode/issues"
Source = "https://github.com/rosstaco/dcode"

[project.scripts]
dcode = "dcode.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dcode/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dcode"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "ruff"]
